# quantum-computing

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  cloudbuild.yaml  docker-compose.yml
apps/backend/: Dockerfile  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial_quantum_foundry.py  0002_extend_artifacts_for_exports.py  0003_add_session_summary_export_job_type.py  0004_add_page_usage.py  0005_add_visitor_id_to_page_usage.py  0006_add_featured_use_case_fields.py
apps/backend/src/foundry_backend/: main.py
apps/backend/src/foundry_backend/api/v1/: __init__.py
apps/backend/src/foundry_backend/api/v1/routes/: architectures.py  artifacts.py  assessments.py  circuits.py  health.py  jobs.py  projects.py  sessions.py  usage.py  (+1 more)
apps/backend/src/foundry_backend/core/: config.py
apps/backend/src/foundry_backend/db/: session.py
apps/backend/src/foundry_backend/models/: base.py  models.py
apps/backend/src/foundry_backend/schemas/: schemas.py
apps/backend/src/foundry_backend/seeds/: seed_use_cases.py
apps/backend/src/foundry_backend/services/: __init__.py  artifacts.py  gemini_circuit_assistant.py  hybrid_lab.py  usage.py  workspace.py
apps/backend/tests/: test_artifact_service.py  test_assessments_route.py  test_gemini_circuit_assistant.py  test_health.py  test_hybrid_lab_service.py  test_usage_service.py  test_use_cases_route.py  test_workspace_service.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/foundry_worker/: app.py  main.py
apps/worker/tests/: test_worker_jobs.py
(+26 files in other folders)
